# quickbms.net

./: CMakeLists.txt  LICENCE  README.md  build.cmd  premake5.lua  quickbms.sln
custom-ports/quickbms/: 001_quickbms.patch  002_quickbms.patch  003_myenc.patch  CMakeLists.txt  CMakeLists.txt.msc  CONTROL  build.cmd  custom.c  portfile.cmake  portfile.cmake.orig  proxy.c  usage
quickbms.core/: IBmsService.cs  quickbms.core.csproj
quickbms.net/: Program.cs  quickbms.net.csproj
quickbms.net/Properties/: launchSettings.json
quickbms.proxy/: BmsService.cs  Directory.Build.targets  NativeLibrary.cs  Program.cs  ProxyTypes.cs  quickbms.proxy.csproj
quickbms.tests/: NativeTest.cs  quickbms.tests.csproj
ref/: build.cmd  build32.cmd  build64.cmd  compile_quickbms.bat
